# minecraft-rl

./: .gitignore  CMakeLists.txt  DISCLAIMER.md  README.md
apps/: CMakeLists.txt  export_policy.cpp  play.cpp  train.cpp  watch.cpp
cloud/: dashboard.html  setup.sh
configs/: sword.toml
rl/: CMakeLists.txt
rl/src/: config.cpp  config.h  replay.cpp  replay.h
rl/src/env/: env.cpp  env.h  interfaces.h  registry.cpp  registry.h  rewards_builtin.cpp  rewards_builtin.h  setters_builtin.cpp  setters_builtin.h  sim_api.h  standard_actions.cpp  standard_actions.h  standard_obs.cpp  standard_obs.h  terminals_builtin.h
rl/src/model/: distributions.cpp  distributions.h  policy.cpp  policy.h
rl/src/ppo/: learner.cpp  learner.h  rollout.cpp  rollout.h
rl/src/runtime/: checkpoint.cpp  checkpoint.h  logger.cpp  logger.h
rl/src/selfplay/: elo.cpp  elo.h  match.cpp  match.h  pool.cpp  pool.h
rl/src/vec/: vec_env.cpp  vec_env.h  worker_pool.cpp  worker_pool.h
sim/: CMakeLists.txt
sim/src/: bot.h  geom.h  items.h  mc_math.h  net.h  physics.cpp  physics.h  sim.cpp  sim.h  world.h
viewer/: CMakeLists.txt
viewer/src/: mc_render.cpp  mc_render.h
