add_library(mcviewer STATIC src/mc_render.cpp)
target_include_directories(mcviewer PUBLIC src)
target_compile_options(mcviewer PRIVATE -O2 -Wall -Wextra)
target_link_libraries(mcviewer PUBLIC mcsim)
if(raylib_FOUND)
    target_link_libraries(mcviewer PUBLIC raylib)
else()
    target_link_libraries(mcviewer PUBLIC ${RAYLIB_LIBRARY})
    target_include_directories(mcviewer PUBLIC ${RAYLIB_INCLUDE})
endif()
